fixed word wrap error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,3 +126,7 @@
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
+pre {
+  white-space: pre-wrap;
+}
